[project]
name = "langchain-multi-interrupt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain-core>=1.2.19",
    "langgraph>=1.1.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]
